--- a/.env.example
+++ b/.env.example
@@ -20,8 +20,7 @@ AZURE_TABLE_NAME=Deliveries
 WEBHOOK_URL=
 
 # [推奨] 本番環境でCORSを許可するオリジン（デプロイしたWebアプリのURL）。
-# 開発中は * のままでも問題ありません。
-CORS_ALLOWED_ORIGINS=*
+CORS_ALLOWED_ORIGINS=
 
 
 # =================================================
